--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 version: "1"
 
 services:
-  nginx:
-    image: nginx:1.20-alpine
-    ports:
-      - 8020:80
-    working_dir: /srv/web
-    volumes:
-      - ./nginx-default.conf:/etc/nginx/conf.d/default.conf
-      - ./:/srv/web
-    depends_on:
-      - php
+  # nginx:
+  #   image: nginx:1.20-alpine
+  #   ports:
+  #     - 8020:80
+  #   working_dir: /srv/web
+  #   volumes:
+  #     - ./nginx-default.conf:/etc/nginx/conf.d/default.conf
+  #     - ./:/srv/web
+  #   depends_on:
+  #     - php
   php:
     build:
       context: .
