--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,31 @@
-version: "1"
+version: "3"
 
 services:
-  # nginx:
-  #   image: nginx:1.20-alpine
-  #   ports:
-  #     - 8020:80
-  #   working_dir: /srv/web
-  #   volumes:
-  #     - ./nginx-default.conf:/etc/nginx/conf.d/default.conf
-  #     - ./:/srv/web
-  #   depends_on:
-  #     - php
+  nginx:
+    image: nginx:1.20-alpine
+    ports:
+      - 8020:80
+    working_dir: /srv/web
+    volumes:
+      - ./nginx-default.conf:/etc/nginx/conf.d/default.conf
+      - ./:/srv/web
+    depends_on:
+      - php
   php:
     build:
       context: .
       dockerfile: php.dockerfile
-    working_dir: /var/www/html
+    working_dir: /srv/web
     volumes:
-      - ./:/var/www/html
+      - ./:/srv/web
       - /.composer:/.composer
-    ports:
-      - 8020:80
-
   node:
     build:
       context: .
       dockerfile: node.dockerfile
-    working_dir: /var/www/html
+    working_dir: /srv/web
     volumes:
-      - ./:/var/www/html
+      - ./:/srv/web
       - /.npm:/.npm
     command: npm run dev
     ports:
