--- a/.env
+++ b/.env
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=103.121.122.247
 DB_PORT=3306
-DB_DATABASE=manda_temp
-DB_USERNAME=manda_temp
-DB_PASSWORD=mbahcip123
+DB_DATABASE=db_manda
+DB_USERNAME=db_manda
+DB_PASSWORD=kelompokmanda
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -54,6 +54,6 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-IMAGEKIT_KEY=public_S+7xHFtaNto6dZSmHM92z2WSQC4=
-IMAGEKIT_PRIVATE_KEY=private_WydbfgLg+cVc5IrX/9e5HHckz3s=
-IMAGEKIT_ENDPOINT=https://ik.imagekit.io/ncip48
+IMAGEKIT_KEY=public_ridOq0KFIF7XYFVFjeGm5RDwSgk=
+IMAGEKIT_PRIVATE_KEY=private_tfVzB+j70Ix1nt1vAwLzr8zM3+A=
+IMAGEKIT_ENDPOINT=https://ik.imagekit.io/kelompokmanda
